// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders <Feature/> with Title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h1
    class="feature__Title-sc-6swrp6-1 eymule"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders <Feature/> with just SubTitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 dGGRJy"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders <Feature/> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h1
    class="feature__Title-sc-6swrp6-1 eymule"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 dGGRJy"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
